# 4D-Tesseractinator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: how-it-works.md  ticket-pack.md
notebooks/: 4D_Tesseractinator_Demo.ipynb
tesseractinator/: __init__.py  _constants.py  geometry.py  notebook.py  presets.py  rendering.py
tests/: conftest.py  test_geometry.py  test_rendering.py
