[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesseractinator"
version = "0.1.0"
description = "Unified notebook-first tools for projecting and slicing a rotating 4D tesseract."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Michael Bagalman" }]
dependencies = [
  "matplotlib>=3.4",
  "numpy>=1.21",
  "scipy>=1.7",
]

[project.optional-dependencies]
notebook = [
  "ipykernel>=6.0",
  "ipywidgets>=7.6",
  "notebook>=7.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tesseractinator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
